# NMT-Translation-gn-es

./: .gitignore  Dockerfile  README.md  cluster_runner.py  config.json  main.py
artifacts/data/test/: test small.es  test small.gn  test.es  test.gn  test_es.txt.es  test_gn.txt  test_gn.txt.gn  test_old.es  test_small.gn
artifacts/parameters/: custom_config_example.json  example.yaml  grid_example.json  grid_test.json
evaluation/: decoded-sp16-gn-es.txt  marian.csv  model-epochs.txt  model_translation_sp16_gn_es.txt
notebooks/: augmented_tests.ipynb  constants.py  data_handling.py  data_quality.ipynb  decoding_analysis.ipynb  first_100_checkpoints.ipynb  first_decoding.ipynb  marian_logs_analysis.ipynb  metric_evaluation.ipynb  multiprocessing_analysis.ipynb  plots.py  random_search.ipynb  tests.ipynb  time_analysis.ipynb  tuning.ipynb
notebooks/data/: first_val_es.txt  first_val_gn.txt
notebooks/utils/: constants.py  plots.py
reproduce_best_models/: best_s2s_es_gn_config.json  best_s2s_gn_es_config.json  pretrain_test_vocab.esV6000_6000.spm  pretrain_test_vocab.gnV6000_6000.spm  run_docker.sh  train_adjusted_test_set.sh
reproduce_best_models/reproduce_best_models/: pretrain_test_vocab.esV6000_6000.spm
scripts/: ingestion.bat  test.bat  validate.sh
scripts/benchmark/: augment.ipynb  google_benchmark.ipynb  google_es_gn.txt  saved_gn.txt
setup/: install-dependencies.sh  install-marian.sh  install-python.sh  requirements.txt  to-cluster.sh
src/: config.py  constants.py  logger.py  main.py  marian.py
tests/: minimal.py  search_duplicates.py
tests/data/: gn_corpus.txt  gn_unique_tokens.txt  gn_unique_tokens.txt.nodup  hyperparameter_log.txt  pretraining_log.txt  random_config.json  reference.txt  run0.0-0.08.out  run0.0-0.08.sh  run0.0-0.08.slurm  run0.08-0.17.sh  run0.08-0.17.slurm  run0.17-0.25.sh  run0.17-0.25.slurm  run0.25-0.33.sh  run0.25-0.33.slurm  run0.33-0.42.sh  run0.33-0.42.slurm  run0.42-0.5.sh  run0.42-0.5.slurm  run_besteffort0.5-0.58.sh  run_besteffort0.5-0.58.slurm  run_besteffort0.58-0.67.sh  run_besteffort0.58-0.67.slurm  run_besteffort0.67-0.75.sh  run_besteffort0.67-0.75.slurm  run_besteffort0.75-0.83.sh  run_besteffort0.75-0.83.slurm  run_besteffort0.83-0.92.sh  run_besteffort0.83-0.92.slurm  run_besteffort0.92-1.0.sh  run_besteffort0.92-1.0.slurm  sp_unique_tokens.txt  sp_unique_tokens.txt.nodup  test.ingestion  test_es.txt  test_gn.txt  train.ingestion.gn  train_es.txt  train_gn.txt  (+3 more)
(+328 files in other folders)
