“Déficit de infraestructura oapunta haimete 600 millones de dólares.
Orekóvo solución integral oñeinverti US$ 6 millones proceso 6 años”, omoañete ministro.
Péva imandu'ávo  heta temikotevë oïva tembiapo oguahëva haimete cinco años de gobierno, ko jefe cartera omoañte oñemotenondeha “importante esfuerzos de mejoramiento integral  oguahëva 1000 instituciones-pe”.
Ministro he'i heta mbo'ehao okukúi ha ivapáva, ministro oñomongeta presidente ndive mba'éichapa ikatu oplantea modelo arquitectónico ikatúva ojeporu convocatoria oívape, péicha mbo'ehao oñemohu'ã.
“Ojeguereko idea oñguahë ha ojekuaa alternativa ojeguerekóva ipya'evéva ombohovái ahguã porandu ojapóva umi estudiante-kuéra”.
KITS  noguahê mo'ãi completo Umi kits escolares, Aguilera oikuaauka primer día de clases oguahê 90 % instituciones.
“Ojeguereko peteî retraso 10 %, ohecha upe 27 oimehápe omohendávo instituciones educativas”.
Ha'éva peteî forma de justificar retraso, ministro he'i arapokõindy oikóvape “ndojeporúi ko'ã tembiporu mbo'ehaópe oñeme'ëva, ha'egui ára oñeintegra haguã hikuái”.
He'i avei ágã, ministro ára 21 de febrero, primer día oficial de clases, presidente de la República omoirûta upe acto oficial Escuela Básica oïva barrio San Francisco, oinauguráva ko ary lectivo.
Ko'ápe oguatáta hikuái upe tendáre mbo'eha koty rupi ha omotenondéta peteî jornada de lectura mit0Ònguéra ndive.