Kuehe ka'aru, Central Unitaria de Trabajadores Auténtica (CUT-A) ha Central Unitaria de Trabajadores (CUT) opresenta oficialmente pedido de reajuste salario mínimo Poder Ejecutivo-pe.
Imandu'ávo estacionamiento Jorge Memmel doble fila de vehículo, omoañete umi "recurso humano ndohupytýi ojesareko haguã, péva falta grave.
Juez Amarilla oiko imputación Ferreiro Paz ha Ferreiro Ayala fiscal omombe’úva “sucintamente el o los hechos” penales oñeme’êva, péva ohai ko’ã grupo Telegram ojapóva red de recaudación paralela, ome’ê ÿre detalle modus operandi.
Capitalización US$ 10 millones oñeipytyvõ haguã pequeño ha mediano ganadero-kuérape
Ha'éma chupekuéra amoneîha.
Upe pintura sa'y iñambue ohupyty jave 100º ha ikatu ohasa pytâgui hovýpe, upéva hechapyrâ.
Derecho ñeꞌẽ rehegua
Erokakuaa
Jopói oñeme'ẽtava chupe niko ohupyty 10 millón guaraníme ha peteĩ kuatia'atã.
Oñembosako'i guarani ñe'ẽaty, ñe'ẽasa ha ñe'ẽjere ára peteĩha.
Erokakuaa